--- a/.env.development
+++ b/.env.development
@@ -2,4 +2,4 @@ VUE_APP_TITLE=Vue Admin Theme (development)
 VUE_APP_LANG=en
 VUE_APP_ROUTER_MODE=hash
 VUE_APP_API_URL=http://page.uz
-VUE_APP_BASE_URL=/admin/
+VUE_APP_BASE_URL=/
